...
            android:stepSize="10"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:contentDescription="Geofence Radius"
            android:theme="@style/Widget.MaterialComponents.Slider"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Button to confirm location -->
        <Button
            android:id="@+id/confirm_button"
...
